# CamShare

./: .gitignore  README.md  buildall.sh  compile.sh  install.sh  package.sh  packageall.sh  timesync.sh  update.sh  updateall.sh
Android/: AndroidManifest.xml
CamShareServer/: .cproject  .project  CamShareMiddleware.cpp  CamShareMiddleware.h  Client.cpp  Client.h  DBHandler.cpp  DBHandler.h  DataHttpParser.h  FreeswitchClient.cpp  FreeswitchClient.h  FreeswitchClientType.h  LogManager.cpp  LogManager.h  Makefile  MessageList.cpp  MessageList.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  SqliteManager.cpp  SqliteManager.h  TcpServer.cpp  camshare-middleware.config  compile.sh  configure  (+7 more)
freeswitch/src/mod/endpoints/mod_ws/: AsyncIOServer.cpp  Client.h  Makefile.am  Rtp2H264VideoTransfer.cpp  Socket.h  TcpServer.h  WSClientParser.cpp  WSClientParser.h  WSPacket.h  WebSocketServer.h  mod_ws.cpp
freeswitch/src/src/mod/applications/mod_file_recorder/: IVideoRecorder.h  Makefile.am  VideoFlvRecorder.cpp  VideoFlvRecorder.h  VideoH264Recorder.cpp  VideoH264Recorder.h  VideoRecordManager.cpp  VideoRecordManager.h  VideoRecorder.cpp  VideoRecorder.h  mod_file_recorder.cpp  srs_librtmp.cpp  srs_librtmp.h
freeswitch/src/src/mod/endpoints/mod_ws/: Arithmetic.cpp  Arithmetic.hpp  AsyncIOServer.cpp  AsyncIOServer.h  Client.h  DataParser.cpp  DataParser.h  IDataParser.h  Makefile.am  Rtp2H264VideoTransfer.cpp  Rtp2H264VideoTransfer.h  Socket.h  TcpServer.cpp  TcpServer.h  WSClientParser.cpp  WSClientParser.h  WebSocketServer.cpp  WebSocketServer.h  mod_ws.cpp
(+331 files in other folders)
